cl-launch (4.0.2-1) unstable; urgency=low

  * Fixes for ECL, LispWorks.
  * Tests moved aside, which reduces script size by over 10%.

 -- Francois-Rene Rideau <fare@tunes.org>  Sat, 01 Mar 2014 14:00:55 -0500

cl-launch (4.0.1.1-3) unstable; urgency=low

  * Speed up startup time by not upgrading ASDF unless needed.
  * Fix 4.0.0 bugs: support old implementations with older ASDF;
    unbreak working from cl-launch dumped image.
  * Add alias -E for --entry.
  * Eat our own dogfood with a CL release script.

 -- Francois-Rene Rideau <fare@tunes.org>  Fri, 28 Feb 2014 18:28:26 -0500

cl-launch (4.0.0-1) unstable; urgency=low

  * Build with --eval --require --file --system in order of appearance.
    No more limitation to one optional file, one optional system.
    Note that --eval is before dump, --init is after dump.
  * Unix interpreter style invocation: /usr/bin/cl script arguments...
  * Require ASDF3 and its UIOP. No more headbanging with ASDF2.

 -- Francois-Rene Rideau <fare@tunes.org>  Thu, 27 Feb 2014 16:49:30 -0500

cl-launch (3.22.1-1) unstable; urgency=low

  * Tweak to hush ASDF upgrade. Minor edit of documentation.

 -- Francois-Rene Rideau <fare@tunes.org>  Mon, 16 May 2013 01:22:49 -0400

cl-launch (3.22-1) unstable; urgency=low

  * Release of cl-launch to match ASDF 3.0.0

 -- Francois-Rene Rideau <fare@tunes.org>  Mon, 16 May 2013 01:22:49 -0400

cl-launch (3.019-1) unstable; urgency=low

  * Use TMPDIR, not TMP.
  * Ensure directories from getenv or not read as file pathnames.
  * Preliminary support for MKCL

 -- Francois-Rene Rideau <fare@tunes.org>  Mon, 15 Oct 2012 19:49:12 -0400

cl-launch (3.018-1) unstable; urgency=low

  * Work with the newest SBCL's sb-ext:exit replacing sb-ext:quit.
  * Document that GCL is dead, and how to produce a LispWorks image.

 -- Francois-Rene Rideau <fare@tunes.org>  Mon, 14 May 2012 14:05:33 -0400

cl-launch (3.017-1) unstable; urgency=low
